[gd_scene load_steps=4 format=3 uid="uid://cgqi4oh7bptwt"]

[ext_resource type="Script" path="res://scripts/gameover.gd" id="1_hbgxb"]
[ext_resource type="FontFile" uid="uid://6fip03hax2k0" path="res://assets/Minecraft.ttf" id="3_gefp0"]

[sub_resource type="LabelSettings" id="LabelSettings_oacqj"]
font = ExtResource("3_gefp0")
font_size = 64

[node name="GAMEOVER" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hbgxb")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -33.5
offset_right = 184.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAMEOVER"
label_settings = SubResource("LabelSettings_oacqj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 898.0
color = Color(1, 0, 0, 0.286275)

[node name="Resart" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 320.0
offset_top = 640.0
offset_right = 576.0
offset_bottom = 896.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_gefp0")
theme_override_font_sizes/font_size = 48
text = " Restart "

[node name="QUIT" type="Button" parent="ColorRect"]
layout_mode = 2
offset_left = 576.0
offset_top = 640.0
offset_right = 832.0
offset_bottom = 896.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_gefp0")
theme_override_font_sizes/font_size = 48
text = "Exit
"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ColorRect/Resart" to="." method="_on_resart_pressed"]
[connection signal="pressed" from="ColorRect/QUIT" to="." method="_on_quit_pressed"]
